--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,13 @@
 name: Docker Image build and push 
 
 on:
-  push:
-   branches: [ main ]
-  pull_request:
-    branches: [ main ]
-      
+    workflow_dispatch
+#   push:
+#    branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
+  
+  
 jobs:
   build:
 
