--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Build & Push Image
       run: |
         
-        docker build -t ${{ secrets.DOCKERUSERNAME }}/frontend:${{ github.run_attempt }} .
+        docker build -t "${{ secrets.DOCKERUSERNAME }}"/github-action-frontend:"${{ github.run_attempt }}" .
         echo "${{ secrets.DOCKERPASSWORD }}" | docker login -u "${{ secrets.DOCKERUSERNAME }}" --password-stdin
-        docker push "${{ secrets.DOCKERUSERNAME }}/github-action-frontend:${{ github.run_attempt }}"
+        docker push "${{ secrets.DOCKERUSERNAME }}"/github-action-frontend:"${{ github.run_attempt }}"
