--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,10 @@
 name: Docker Image build and push 
 
 on:
-    workflow_dispatch
-#   push:
-#    branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
+  push:
+   branches: [ main ]
+  pull_request:
+    branches: [ main ]
   
   
 jobs:
