--- a/.github/workflows/aws-ecs.yml
+++ b/.github/workflows/aws-ecs.yml
@@ -1,8 +1,7 @@
 name: Amazon ECS deploy
 
 on:
-  push:
-    branches: [ "main" ]
+   workflow_dispatch
 
 env:
   AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
